contact link added

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           <li><a href="#">Portfolio</a></li>
           <li><a href="#">services</a></li>
           <li><a href="#">testimonials</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </div>
       <div class="right-box">
