video-card-design

--- a/index.html
+++ b/index.html
@@ -39,5 +39,30 @@
         />
       </div>
     </nav>
+
+    <section class="main">
+      <article class="video-card">
+        <img
+          class="thumbnail"
+          src="https://i.ytimg.com/vi/AGddeDjad-4/hqdefault.jpg?sqp=-oaymwEnCOADEI4CSFryq4qpAxkIARUAAIhCGAHYAQHiAQoIGBACGAY4AUAB&rs=AOn4CLDWUnqaEOVDBGxVrIsn_f2eA0kCdg"
+          alt="thumbnail"
+        />
+        <div class="video-info">
+          <div class="profile-img">
+            <img
+              src="https://yt3.ggpht.com/T_YLnS40ei5p6xn_kkJ-SGAjZxWGZrk9JEw8YaZrgbsCS69xsy94ZvFEWxIAEg8lk9095MrKY08=s68-c-k-c0x00ffffff-no-rj"
+            />
+          </div>
+          <div class="video-details">
+            <h2>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa aut
+              numquam quibusdam!
+            </h2>
+            <p>NoCode Ai Builders</p>
+            <span>25k views &#8226; 5 days ago</span>
+          </div>
+        </div>
+      </article>
+    </section>
   </body>
 </html>
